features (completed) and activity (edits)

--- a/activity.Rmd
+++ b/activity.Rmd
@@ -1,7 +1,7 @@
 
 # Activity {#activity}
 
-The objective study of human physical activity is one of the exciting opportunities created by passive EMA [@Marszalek2014]. Through technological advances, we are now able to continuously monitor (in-)activity of participants in every-day life, with little to no participant burden. While questions remain with regard to the validity, reliability and clinical utility of passive EMA with regard to various aspects of activity, such as (disturbed) sleep, sedentary behavior, and energy expenditure [see, e.g., @Feehan2018, @Gomersall2016], an increasing number of mental health studies are including activity tracking devices to study sleep habits and circadian rhythm disorders [see, e.g., @Saeb2015, @Saunders2016, @Tahmasian2013].
+The objective study of human physical activity is one of the exciting opportunities created by passive EMA [@Marszalek2014]. Through technological advances in mobile sensing, we are now able to continuously monitor (in-)activity of participants in every-day life, with little to no participant burden. While questions remain with regard to the validity, reliability and clinical utility of passive EMA with regard to various aspects of activity, such as (disturbed) sleep, sedentary behavior, and energy expenditure [see, e.g., @Feehan2018, @Gomersall2016], an increasing number of mental health studies are including activity tracking devices to better understand sleep habits, circadian rhythm disorders and depression [see, e.g., @Saeb2015, @Saunders2016, @Tahmasian2013].
 
 In this chapter, we will discuss two passive EMA methods to assess physical activity: actigraphy and geotracking. Of these two, actigraphy has been used most in human clinical research. However, due to the massive adoption of smartphones, researchers increasingly collect geolocation data as well, inspired perhaps by the elaborate geolocation data analysis techniques that have been developed in the past decades in wildlife telemetry research [@tomkiewicz2010global].
 
@@ -11,7 +11,7 @@ In this chapter, we will discuss two passive EMA methods to assess physical acti
 
 Accelerometers are micro electro-mechanical systems (MEMS) that measure changes in velocity, typically simultanously on the vertical (Y), horizontal right-left (X) and horizontal front-back axis (Z). Through actigraphy, we can study the frequency, duration, and intensity of physical activity. 
 
-Figure \@ref(fig:genea-one-hour) shows one hour of data collected from a wrist-worn GENEActive accelerometer. As can be seen, five sensors were simultanously providing data: three accelerometers (X, Y, Z), temperature and light. Data were sampled with a frequency of 30Hz (thirty measurements per second), but subsampled here to 0.1Hz (one measurement every 10 seconds) for practical reasons. If we would have plotted the data at 30hz, the plot would have included 108.000 data points. At 0.1Hz, this reduces to 3600 points. 
+Figure \@ref(fig:genea-one-hour) shows one hour of data collected from a wrist-worn GENEActive accelerometer. As can be seen, five sensors were simultanously providing data: three accelerometers (X, Y, Z), but also temperature and light. Data were sampled with a frequency of 30Hz (thirty measurements per second), but subsampled here to 0.1Hz (one measurement every 10 seconds), for practical reasons. If we would have plotted the data at 30hz, the plot would have included 108.000 data points. At 0.1Hz, this reduces to 3600 points. 
 
 ```{r genea-one-hour, fig.asp = 0.75, fig.cap = "One hour of raw data collected with a wrist-worn GENEActive  accelerometer, sub-sampled to 10-second epochs (0.1 Hz)", echo = FALSE}
 # Plot one hour of accelerometer data.
