--- a/book.bib
+++ b/book.bib
@@ -343,6 +343,19 @@
   url     = {http://studiolab.ide.tudelft.nl/diopd/library/tools/pick-a-mood/},
 }
 
+@misc{Doherty2018,
+author = {Doherty, Aiden},
+booktitle = {The Lancet Psychiatry},
+doi = {10.1016/S2215-0366(18)30172-X},
+issn = {22150374},
+pmid = {29776773},
+title = {{Circadian rhythms and mental health: wearable sensing at scale}},
+year = {2018}
+}
+
+
+
+
 @article{Dogan2017,
   title={Smartphone-based monitoring of objective and subjective data in affective disorders: Where are we and where are we going? Systematic review},
   author={Dogan, Ezgi and Sander, Christian and Wagner, Xenija and Hegerl, Ulrich and Kohls, Elisabeth},
@@ -597,6 +610,18 @@
 }
 
 
+@misc{Frank2000,
+  booktitle = {Biological Psychiatry},
+  doi = {10.1016/S0006-3223(00)00969-0},
+  isbn = {9780470721988},
+  issn = {00063223},
+  keywords = {Bipolar disorder,Circadian rhythms,Interpersonal psychotherapy,Life events,Mood disorders,Psychotherapy},
+  pmid = {11018230},
+  title = {{Interpersonal and social rhythm therapy: Managing the chaos of bipolar disorder}},
+  year = {2000}
+}
+
+
 @article{Gomersall2016,
   doi = {10.2196/jmir.5531},
   isbn = {1438-8871},
@@ -801,6 +826,19 @@ year = {1995}
   year={2018},
   publisher={British Medical Journal Publishing Group}
 }
+
+@article{Karatsoreos2014,
+  author = {Karatsoreos, Ilia N.},
+  doi = {10.3389/fnbeh.2014.00162},
+  isbn = {1662-5153},
+  issn = {1662-5153},
+  journal = {Frontiers in Behavioral Neuroscience},
+  pmid = {24834040},
+  title = {{Links between Circadian Rhythms and Psychiatric Disease}},
+  year = {2014}
+}
+
+
 
 @article{kaida2006,
   title={Validation of the Karolinska sleepiness scale against performance and EEG variables},
