--- a/features.Rmd
+++ b/features.Rmd
@@ -3,7 +3,8 @@
 
 # Feature Extraction {#features}
 
-EMA data are streams: time-series that represent processes which may span hours, days, weeks or even months. To the EMA researcher, it may not be immediately clear how to deal with these data. How, for example, can these series be summarized to study differences between individuals or changes within individuals over time? What 'qualities' or 'features' of a time-series should be considered? What are the available options? In this chapter, we will discuss some of the features that can be extracted from EMA time-series.
+EMA data are streams: time-series that represent processes which may span hours, days, weeks or even months. To the beginning EMA researcher, it may not be immediately clear how to deal with these data. How, for example, can these series be summarized to study differences between individuals or changes within individuals over time? What 'qualities' or 'features' of a time-series should be considered? What are the available options? In this chapter, we will discuss some of the features that can be extracted from EMA time-series.
+
 
 ## Simulated EMA Time-series Example
 
@@ -82,7 +83,7 @@ Our simulated EMA time-series is non-stationary, as can be seen in Figure \@ref(
 
 When a trend exists in a series, the overall standard deviation is overestimated, because of the extra variability that is introduced by the changes of the mean. This can be checked by comparing the SD of the full series to the SD of smaller parts. In our example, the overall SD is `r round(sd(e$s), 1)`. If we calculate the average of the SD of scores of each day, however, the estimated SD is `r round(mean(aggregate(e$s, by = list(day = floor(e$t)), FUN = sd)$x), 1)`. If the additional variability introduced by the trend is cancelled out, our estimate of variability decreases considerably.   
 
-```{r fig8b, echo = FALSE, out.width = "100%", fig.asp = .5, fig.cap = "EMA time-series, with reference lines for the mean (red line) and the mean +/- 1 standard deviation range (the area between the two blue lines)"}
+```{r fig8b, echo = FALSE, out.width = "100%", fig.asp = .5, fig.cap = "EMA time-series, with reference lines for the mean (red line) and the mean +/- 1 standard deviation range (the area between the two blue lines). Both statistics are informative, but obviously do not do full justice to the variation in observations over time."}
 # plot signal with mean and variance
 e <- subset(d, !is.na(s))
 ggplot(e, aes(x = t, y = s)) +
@@ -101,9 +102,7 @@ ggplot(e, aes(x = t, y = s)) +
 fm = lm(s ~ t, e)
 ```
 
-Now that we know that the overall mean and SD are sub-optimal features of this time-series, the question is how we can do better. What other features can we extract? One option would be to characterize the series in simple regression terms, via an intercept and a slope. By doing so, we can economically describe the dynamics of the series with two numbers.
-
-As can be seen in Figure \@ref(fig:fig8c), the regression model provides a more realistic and informative summary. At the start, the estimated mean - the intercept - is `r round(coef(fm)[1], 1)`. This mean increases approximately `r round(coef(fm)[2] * 7,  1)` points per day (the slope), to a final estimated mean of `r round(coef(fm)[1], 1) + round(coef(fm)[2] * 21, 1)`.
+Now that we know that the overall mean and SD are sub-optimal features of this time-series, the question is how we can do better. What other features can we extract? One option would be to characterize the series in simple regression terms, via an intercept and a slope. By doing so, we can economically describe the dynamics of the series with two numbers. As can be seen in Figure \@ref(fig:fig8c), the regression model provides a more realistic and informative summary. At the start, the estimated mean - the intercept - is `r round(coef(fm)[1], 1)`. This mean increases approximately `r round(coef(fm)[2] * 7,  1)` points per day (the slope), to a final estimated mean of `r round(coef(fm)[1], 1) + round(coef(fm)[2] * 21, 1)`.  Comparing Figure \@ref(fig:fig8b) and Figure \@ref(fig:fig8c), we see that Figure \@ref(fig:fig8c) appears to be more successful in capturing the variation in the series. 
 
 ```{r fig8c, echo = FALSE, out.width = "100%", fig.asp = .3, fig.cap = "EMA time-series, with a regression reference line (red) and the residual error SD range around this line (the area between the two blue lines)"}
 ggplot(e, aes(x = t, y = s)) +
@@ -116,9 +115,7 @@ ggplot(e, aes(x = t, y = s)) +
   theme_bw() + theme(panel.grid.minor = element_blank())
 ```
 
-By using regression, we can also find a better estimate of the SD. Remember how the SD is conceptually defined as the average distance between the scores and the mean. Since the mean is modeled by the regression line, we can estimate the SD by calculating the standard deviation of the residuals of the regression model that we used to retrieve the intercept and slope. For our series, this results in an estimated SD of `r round(sd(resid(fm)), 1)`. The new SD estimate is smaller than the overall SD, as expected. By accounting for the extra variability introduced by the trend, we get a more accurate estimate of the variability around the mean at each point in time. However, the new estimate is still higher than the daily estimate that we calculated above. The regression summary provides a better description of the series, but this series may have other important features that we are still unaware of.
-
-Figure \@ref(fig:fig8d) provides a first indication of what is going on. In the figure, absolution regression residuals are plotted over time, with a regression line superposed. This reveals that residuals increase as time goes by. We discovered a new feature of the series: heteroscedasticity. 
+By using regression, we can also find a better estimate of the SD. Remember how the SD is conceptually defined as the average distance between the scores and the mean. Since the mean is modeled by the regression line, we can estimate the SD by calculating the standard deviation of the residuals of the regression model that we used to retrieve the intercept and slope. For our series, this results in an estimated SD of `r round(sd(resid(fm)), 1)`. The new SD estimate is smaller than the overall SD, as expected. By accounting for the extra variability introduced by the trend, we get a more accurate estimate of the variability around the mean at each point in time. However, the new estimate is still higher than the daily estimate that we calculated above. Figure \@ref(fig:fig8d) provides a first indication of what is going on. In the figure, absolution regression residuals are plotted over time, with a regression line superposed. This reveals that residuals increase as time goes by. We discovered a new feature of the series: heteroscedasticity. 
 
 ```{r fig8d, echo = FALSE, out.width = "100%", fig.asp = .3, fig.cap = "Plot of absolute regression residuals over time, revealing heteroscedasticity."}
 e$residuals <- rstandard(fm)
@@ -141,11 +138,9 @@ p <- subset(p, Var2 == TRUE)
 fm2 <- lm(p$Freq ~ as.numeric(p$Var1))
 ```
 
-In EMA research, you should be prepared to deal with missing values. Especially with active EMA, in which participants have to consciously respond to prompted questions several times a day, non-response is inevitable. Missing values are typically considered to be a nuisance rather than a feature of EMA time-series. Non-response, however, is an important characteristic, that may even have clinical relevance.
+In EMA research, you should be prepared to deal with missing values. Especially with active EMA, in which participants have to consciously respond to prompted questions several times a day, non-response is inevitable. Missing values are typically considered to be a nuisance rather than a feature of EMA time-series. Non-response, however, is an important characteristic, that may even have clinical relevance. Missing values are also present in our simulated EMA time-series example, as you may have found out already when you inspected Figure \@ref(fig:fig8a). The points, denoting the observed responses, are denser in the beginning of the series. Over the course of the study period, the probability of missed ratings increases. This becomes immediately clear from Figure \@ref(fig:fig8e), in which the percentage of missed ratings is plotted per day. Every week, the probability of missed ratings increases approximately `r round(coef(fm2)[2]*7*100)`%. 
 
-Missing values are also present in our simulated EMA time-series example, as you may have found out already when you inspected Figure \@ref(fig:fig8a). The points, denoting the observed responses, are denser in the beginning of the series. Over the course of the study period, the probability of missed ratings increases. This becomes immediately clear from Figure \@ref(fig:fig8e), in which the percentage of missed ratings is plotted per day. Every week, the probability of missed ratings increases `r round(coef(fm2)[2]*7*100)`%.
-
-```{r fig8e, echo = FALSE, out.width = "100%", fig.asp = .3, fig.cap = "Percentage of missed mood ratings, per day, over the three-week study period, with a regression line (red) superposed."}
+```{r fig8e, echo = FALSE, out.width = "100%", fig.asp = .3, fig.cap = "Percentage of missed mood ratings, per day, over the three-week study period, with a regression line (red) superposed, revealing a familiar trend in EMA data."}
 ggplot(p, aes(x = as.numeric(Var1), y = Freq * 100)) + 
   geom_smooth(method = "lm", color = "red", se = FALSE) +  
   geom_point() + 
@@ -154,7 +149,7 @@ ggplot(p, aes(x = as.numeric(Var1), y = Freq * 100)) +
   theme_bw() + theme(panel.grid.minor = element_blank())
 ```
 
-Now that we now that missing values are present, an new question arises: how should we deal with missing values? You can choose to ignore the missing values, or to replace the missing values with plausible values. Some analysis techniques, such as mixed modelling, do not require imputation, which is good. Others techniques, however, are intolerant to missing values. If you need to impute, there are several options. One can choose to replace missing values with the mean, the last-known value, an interpolated value or use a smoothing technique in which missing values are automatically replaced, such as the kalman-filter [see @hoogendoorn2017_book, for a discussion of these techniques]. Figure \@ref(fig:fig8f) illustrates the linear interpolation approach: missing values (marked by red dots) are replaced by values that lie between the non-missings.  
+Now that we now about these missing values, the question arises how to deal with them? You can choose to ignore the missing values (assuming that the occurrence of missing values was driven by a completely random process).  Alternatively, you could try to replace the missing values with plausible values (in which case it becomes important to think about the process that drives the missingness). If you decide to impute, there are several options. For example, you can replace missing values with the mean, the last-known value, an interpolated value or with a smoothing technique such as the Kalman-filter [see @hoogendoorn2017_book, for a discussion]. Figure \@ref(fig:fig8f) illustrates the linear interpolation approach: missing values (marked by red dots) are replaced by values that lie between the non-missings. Imagine that we would have used the mean to impute. Can you see why that would have disrupted local patterns in the series?
 
 ```{r fig8f, echo = FALSE, out.width = "100%", fig.asp = .3, fig.cap = "EMA time series, with missing values (red) imputed through interpolation."}
 # Imputation through interpolation 
@@ -185,20 +180,19 @@ ggplot(d, aes(x = t, y = s_imputed)) +
 
 ## Autocorrelation
 
-When a series is correlated with delayed copyies of itself, we say that it is autocorrelated. In repeated measurements of natural phenomena, this autocorrelation can often be found. The temperature of today is correlated with the temperature of recent days. Similarly, EMA mood ratings, taken at time t, are typically correlated with ratings taken at t-1, t-2, etc. This is illustrated in Figure \@ref(fig:fig8g). 
-Studying the autocorrelation of a timeseries can be very revealing, as illustrated by the autocorrelation plot in Figure \@ref(fig:fig8g), in which the correlation of the EMA mood series with itself is plotted, for various delays (or 'lags' as these delays are called). First, the plot reveals that observations are correlated with previous values at lag 1: this series is autocorrelated. Second, there appears to be a pattern in the correlations at later lags: positive and negative correlations alternate, in a pattern that seems to reflect periodicity.   
+When a series is correlated with delayed copies of itself, we say that it is auto-correlated. In repeated measurements of natural phenomena, this auto-correlation can often be found. The temperature of today is correlated with the temperature of recent days. Similarly, EMA mood ratings, taken at time t, are typically correlated with ratings taken at t-1, t-2, etc. This is illustrated in Figure \@ref(fig:fig8g). Studying the auto-correlation of a time-series at different delays can be very revealing, as illustrated by the auto-correlation plot in Figure \@ref(fig:fig8g), in which the correlation of the EMA series with itself is plotted, for various delays (or 'lags' as these delays are called). First, the plot reveals that observations are correlated with previous values at lag 1: this series is auto-correlated. Second, there appears to be a pattern in the correlations at later lags: positive and negative correlations alternate, in a pattern that seems to reflect periodicity.   
 
-```{r fig8g, echo = FALSE, out.width = "100%", fig.asp = .5, fig.cap = "Autocorrelation plot of the EMA mood series."}
-acf(e$s, type = "partial", lag.max = 35)
+```{r fig8g, echo = FALSE, out.width = "100%", fig.asp = .3, fig.cap = "Autocorrelation plot of the EMA mood series, revealing periodicity."}
+op = par(mar = c(3, 3, 1, 1))
+acf(e$s, type = "partial", lag.max = 35, main = "")
+par(op)
 ```
 
 ### Rolling statistics
 
-From the autocorrelation analysis, we learned that describing the EMA series as a simple trend might be too simplistic. The mean does not increase in a simple linear fashion. There seems to be a periodic component in the series as well: increases in the mean are followed by decreases. 
+From the auto-correlation analysis, we learned that describing the EMA series as a simple trend might be too simplistic. The mean does not increase in a simple linear fashion. There seem to be periodic components in the series as well: the signal appears also to be characterized by a series of increases and decreases in the mean mood level. In the plot of the raw series, this is not immediately clear. However, if we "smooth" the series, by calculating the mean as it develops over time, the periodicity in the series is becoming more clear. Figure \@ref(fig:fig8h) illustrates this.
 
-In the plot of the raw series, this is not immediately clear. However, if we "smooth" the series, by calculating the mean as it develops over time, the periodicity in the series is becoming more clear. Figure \@ref(fig:fig8h) illustrates this.
-
-```{r fig8h, echo = FALSE, out.width = "100%", fig.asp = .3}
+```{r fig8h, echo = FALSE, out.width = "100%", fig.asp = .3, fig.cap = "EMA mood series, with a rolling mean superposed."}
 d$rolling_mean <-
   as.numeric(
     zoo::rollapply(
@@ -225,9 +219,9 @@ ggplot(e, aes(x = t, y = rolling_mean)) +
 
 ## Periodicity
 
-Both the autocorrelation analysis and the moving average plot suggested periodicity in the EMA time series. Through Fourier Analysis, the exact nature of the periodicity can be analysed. Figure \@ref(fig:fig8i) shows the strength ('power') of various frequencies in the EMA series.  
+Both the auto-correlation analysis and the moving average plot suggest periodicity in the EMA time series. Suppose we want to know more about this periodicity. Is there a way to quantify it? Yes, there is. With a technique called Fourier Analysis, the the strength ('power') of various frequencies can be quantified. Figure \@ref(fig:fig8i) shows what happens if we run a Fourier analysis of our time series (with R's built-in function 'spec.pgram').
 
-```{r fig8i, echo = FALSE, out.width = "100%", fig.asp = .6, fig.cap = "periodogram of the EMA time series, revealing a one-day and a one-week period."}
+```{r fig8i, echo = FALSE, out.width = "100%", fig.asp = .4, fig.cap = "periodogram of the EMA time series, revealing a one-day and a one-week period."}
 fa <- spec.pgram(ts(impute_interpolation(d$s), frequency = n_measurements_per_day), 
                  detrend = TRUE, demean = TRUE, 
                  main = "periodogram",  sub = "",
@@ -236,5 +230,228 @@ fa <- spec.pgram(ts(impute_interpolation(d$s), frequency = n_measurements_per_da
                  spans = NULL, taper = 0.01, ci = FALSE)
 ```
 
-There are two peaks in the figure: at a frequency of 1 (day) and at a frequency of `r round(fa$freq[order(fa$spec, decreasing = TRUE)][1], 2)` (about one week). Mood ratings seem to follow a daily and a weekly pattern. The series is "circadian".
+There are two peaks in the figure: at a frequency of 1 (day) and at a frequency of `r round(fa$freq[order(fa$spec, decreasing = TRUE)][1], 2)` (about one week). This series is "circadian": mood ratings seem to follow a daily and a weekly pattern. This is a common characteristic of EMA data, because of the circadian rhythms in our body and in our environment (our biological clocks, day-night cycles, seasons) [@Doherty2018; @Frank2000; @Karatsoreos2014; @VanSomeren2000; @Tahmasian2013].
 
+
+## Discussion
+
+In this chapter, we used a number of statistical indicators to characterize a single time-series. By extracting these indicators (or "features"), we identified several regularities. We learned that the mean, variance and missingness increased over time, and we identified clear signs of circadian rhythmicity. You might have identified some of these features when you first inspected Figure \@ref(fig:fig8a). The increase in the mean was pretty easy to spot. However, the systematic increases in the variance and the missingness were less clear. Likewise, although you might have spotted the periodicity in the series, the circadian components were probably too subtle to spot for the naked eye. 
+
+The aim of the chapter was to illustrate the options available to the EMA researcher to quantitatively summarize EMA series. Other options, of course, exist. In chapter \@ref(csd), for example, we will see how subtle changes in variation and auto-correlation in EMA mood scores can be summarized in a single dynamic statistical feature that may be predictive indicator of significant future state changes.
+
+Finally, you might have been disappointed by the lack of code examples in this chapter. We did not include them, to avoid unnecessary distraction from the conceptual explanation. Instead, we provide a full code listing below, to allow you learn how to apply the feature extraction techniques yourself.   
+
+
+```{r csfeaturextraction, echo = TRUE, eval = FALSE}
+## Constructing the simulated EMA time-series
+
+# libraries ----------------
+library(ggplot2)
+library(gridExtra)
+library(psych)
+library(zoo)
+
+# simulate the signal -------
+set.seed(123)
+n_measurements_per_day <- 5
+n_days <- 21
+n <- n_measurements_per_day * (n_days)
+m <- 3
+sdev_min <- 1
+sdev_max <- 4
+trend  <- 3
+missingness_prob = c(0.1, 0.5)
+autocorrelation = .6
+
+## time
+t <- seq(0, (n - 1) * 1 / 5, by =  1 / 5)
+
+## signal
+s <- numeric(length(t))
+
+## periodicity
+s <- seq(sdev_min, sdev_max, length.out = n) * sin(1   * t * 2 * pi)
+s <-
+  s + 0.5 * seq(sdev_min, sdev_max, length.out = n) * sin(1 / 7 * t * 2 * pi)
+
+## mean + trend + sd (heteroscedastic)
+s <- s + rnorm(n,
+               mean = seq(m, m + trend, length.out = n),
+               sd = 0.5)
+
+
+s <- s + 1 * arima.sim(model = list(ar = autocorrelation), n = n)
+
+## missingness
+m1 <-
+  rbinom(n, 1, seq(missingness_prob[1], missingness_prob[2], length.out = n))
+s[m1 == 1] <- NA
+
+## in range
+s[s > 10] <- 10
+s[s < 0] <- 0
+
+## combine in data.frame
+d <- data.frame(t, s)
+
+# plot -------------------------
+e <- subset(d,!is.na(s))
+
+# raw series 
+ggplot(e, aes(x = t, y = s)) +
+  geom_line() +
+  geom_point() +
+  ylab("mood") + xlab("days") +
+  ylim(0, 10) +
+  theme_bw() + theme(panel.grid.minor = element_blank())
+
+
+# plot mean and variance --------
+ggplot(e, aes(x = t, y = s)) +
+  geom_hline(yintercept = mean(e$s, na.rm = TRUE), color = "red") +
+  geom_hline(
+    yintercept = mean(e$s, na.rm = TRUE) + sd(e$s, na.rm = TRUE),
+    color = "blue",
+    linetype = 2
+  ) +
+  geom_hline(
+    yintercept = mean(e$s, na.rm = TRUE) - sd(e$s, na.rm = TRUE),
+    color = "blue",
+    linetype = 2
+  ) +
+  #geom_line() +
+  geom_point() +
+  ylab("mood") + xlab("days") +
+  ylim(0, 10) +
+  theme_bw() + theme(panel.grid.minor = element_blank())
+
+
+## The trends ---------------------
+
+## run a linear regression of mood ratings by time
+fm = lm(s ~ t, e)
+
+## mean
+ggplot(e, aes(x = t, y = s)) +
+  geom_smooth(method = "lm", color = "red", se = FALSE) +
+  geom_abline(
+    intercept = coef(fm)[1] + sd(resid(fm)),
+    slope = coef(fm)[2],
+    color = "blue",
+    linetype = 2
+  ) +
+  geom_abline(
+    intercept = coef(fm)[1] - sd(resid(fm)),
+    slope = coef(fm)[2],
+    color = "blue",
+    linetype = 2
+  ) +
+  geom_point() +
+  ylab("mood") + xlab("days") +
+  ylim(0, 10) +
+  theme_bw() + theme(panel.grid.minor = element_blank())
+
+
+## residuals
+e$residuals <- rstandard(fm)
+e$week <- (e$t %/% 1) + 1
+
+ggplot(subset(e, week < 20), aes(x = t, y = abs(residuals))) +
+  geom_point() +
+  geom_smooth(method = "lm", color = "red", se = FALSE) +
+  ylab("absolute residuals") + xlab("week") +
+  theme_bw() + theme(panel.grid.minor = element_blank())
+
+
+# Missing values ----------------------
+
+d$t_g <- cut(t, 21, labels = 1:21)
+p <- prop.table(table(d$t_g, is.na(d$s)), 1)
+p <- as.data.frame(p)
+p <- subset(p, Var2 == TRUE)
+fm2 <- lm(p$Freq ~ as.numeric(p$Var1))
+
+ggplot(p, aes(x = as.numeric(Var1), y = Freq * 100)) +
+  geom_smooth(method = "lm", color = "red", se = FALSE) +
+  geom_point() +
+  ylab("missed ratings (%)") + xlab("days") +
+  ylim(0, 100) +
+  theme_bw() + theme(panel.grid.minor = element_blank())
+
+
+## imputation through interpolation
+impute_interpolation <- function(x) {
+  require(zoo)
+  
+  y = zoo(x)
+  
+  # fill initial and trailing NA
+  if (is.na(y[1]))
+    y[1] = y[which.max(!is.na(y))]
+  if (is.na(y[length(y)]))
+    y[length(y)] = y[max((!is.na(y)) * (1:length(y)))]
+  
+  # interpolate
+  y_ = as.numeric(na.approx(y))
+  
+  y_
+}
+
+
+d$s_imputed <- impute_interpolation(d$s)
+ggplot(d, aes(x = t, y = s_imputed)) +
+  geom_line(color = 1) +
+  geom_point(aes(color = is.na(s))) +
+  scale_color_manual(values = c("black", "red")) +
+  guides(color = FALSE) +
+  theme_bw() + theme(panel.grid.minor = element_blank())
+
+
+# Autocorrelation ---------------------------
+acf(e$s,
+    type = "partial",
+    lag.max = 35,
+    main = "")
+
+
+# Rolling mean ------------------------------
+d$rolling_mean <-
+  as.numeric(
+    zoo::rollapply(
+      as.numeric(d$s),
+      width = 5,
+      FUN = function(x)
+        mean(x, na.rm = TRUE),
+      fill = NA,
+      align = "right",
+      partial = TRUE
+    )
+  )
+
+e <- subset(d,!is.na(s))
+ggplot(e, aes(x = t, y = rolling_mean)) +
+  geom_point(aes(y = s), color = "grey", size = .8) +
+  geom_line(size = 1.2) +
+  ylab("Mood (rolling mean)") + xlab("days") +
+  ylim(0, 10) +
+  theme_bw() + theme(panel.grid.minor = element_blank())
+
+
+# Frequency analysis --------------------------
+
+fa <-
+  spec.pgram(
+    ts(impute_interpolation(d$s), frequency = n_measurements_per_day),
+    detrend = TRUE,
+    demean = TRUE,
+    main = "periodogram",
+    sub = "",
+    xlab = "frequency",
+    log = "no",
+    ylab = "power",
+    type = "h",
+    spans = NULL,
+    taper = 0.01,
+    ci = FALSE
+  )
+```
