Add comments team Eus

--- a/aph-catalogue.Rmd
+++ b/aph-catalogue.Rmd
@@ -257,7 +257,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **APH site** | The Netherlands Institute for Neuroscience, VUmc, GGZ inGeest,  |
 | **Project(s)** | The Van Someren group is involved in a variety of projects in which sensory data are collected (see, e.g., @VanSomeren2011, @VanSomeren2000). Exemplary of current research activity is the work of PhD candidates *Wisse van der Meijden* and *Bart te Lindert*. Van der Meijden studies, among other things, the interplay between light, vigilance, and sleep. A recent study associated the post-illumination pupil response (PIPR) to blue light with multiple indices of sleep timing: a) a questionnaire on habitual lights-out time, sleep onset latency, and final wake-up time (Munich Chronotype Questionnaire, MTCQ [@Roenneberg2003]); b) a one-week sleep diary on actual wake/sleep times; and c) actigraphy.  Participants (adolescents and young adults, n = 71) with a later sleep timing had a stronger responsiveness to blue light. The mid-sleep timing estimates from sleep diaries and actigraphy shared 94.5% of their inter-individual variance [@Meijden2016]. | 
 |                |  *Bart te Lindert* studies the effect of the environment on sleepiness, for example by measuring light, (skin) temperature, posture, and psychological variables. A recent study focused on the effect of light intensity on Liking, Wanting and mood in insomnia disorder [@Lindert2018] The study combined active and passive EMA. EMA prompts were sent 8 times a day, for one week and were timed at quasi-random intervals between 8:00 and 22:00. In addition, participants provided input after waking up and before bedtime. EMA consisted of 22 items. Liking and Wanting (6 items each), focused on taste or smell, bodily sensation, watching or listening, interactions with other, physical activity or being busy, and receiving something, measured on on a 0-100 VAS scale. Mood items were derived from the Daytime Insomnia Symptom Scale (DISS, @buysse2007), which was developed specifically for EMA. Items focused on positive mood (5 items) and negative mood (5 items), scored on a 0-100 VAS-scale. In addition, participants wore two light sensors (Dimesimeter) measuring wear-time and light. Participants received a designated Android smartphone for the duration of EMA. People with insomnia disorder (n = 17) had significantly lower subjective Liking and Wanting than matched controls without sleep complaints (n = 18). This was most apparent at low environmental light intensity. There were no overall differences between groups in Positive mood and Negative mood. Participants with insomnia did have a different diurnal profile of Positive mood and Negative mood [@Lindert2018]. | 
-| **Platform(s) used**| Philips Actiwatch Spectrum; Microelectromechanical accelerometer (Move II, Movisens GmbH)Actigraphy data were obtained using either a Philips Actiwatch Spectrum. Sleep onset and final wake-up time were estimated using an algorithm that is implemented in Matlab (http://github.com/btlindert/actant-1). | 
+| **Platform(s) used**| Philips Actiwatch Spectrum; Microelectromechanical accelerometer (Move II, Movisens GmbH). Sleep onset and final wake-up time were estimated using an algorithm that is implemented in Matlab (http://github.com/btlindert/actant-1). For EMA the MovisensXS platform was used (https://xs.movisens.com/, see Chapter \@ref(ema-instruments-catalogue)). | 
 | **Contact** | http://research.vumc.nl/en/persons/eus-jw-van-someren|
 |             | http://herseninstituut.nl/over-ons/de-organisatie/medewerkers/bart-te-lindert/ |
 |             | http://herseninstituut.nl/over-ons/de-organisatie/medewerkers/wisse-van-der-meijden/ |
